<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/bg_white_rounded"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/cardLogin"
        android:padding="24dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#27B1AF"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_input"
            android:gravity="center_vertical"
            android:padding="12dp">

            <ImageView
                android:contentDescription="@string/username_icon"
                android:src="@drawable/ic_user_foreground"
                android:layout_width="24dp"
                android:layout_height="24dp" />

            <EditText
                android:id="@+id/etName"
                android:autofillHints="name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/username"
                android:layout_marginStart="12dp"
                android:background="@null"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_input"
            android:gravity="center_vertical"
            android:padding="12dp">

            <ImageView
                android:contentDescription="@string/email_icon"
                android:src="@drawable/ic_email_foreground"
                android:layout_width="24dp"
                android:layout_height="24dp" />

            <EditText
                android:id="@+id/etEmail"
                android:autofillHints="emailAddress"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/email"
                android:layout_marginStart="12dp"
                android:background="@null"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_input"
            android:gravity="center_vertical"
            android:padding="12dp">

            <ImageView
                android:contentDescription="@string/password"
                android:src="@drawable/ic_lock"
                android:layout_width="24dp"
                android:layout_height="24dp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:hint="@string/password"
                android:background="@null"
                android:inputType="textPassword"
                android:layout_marginStart="12dp"
                android:autofillHints="password" />

            <ImageView
                android:contentDescription="@string/show_password"
                android:id="@+id/btnShowPassword"
                android:src="@drawable/ic_eye"
                android:layout_width="24dp"
                android:layout_height="24dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_input"
            android:gravity="center_vertical"
            android:padding="12dp">

            <ImageView
                android:contentDescription="@string/password"
                android:src="@drawable/ic_lock"
                android:layout_width="24dp"
                android:layout_height="24dp" />

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:hint="@string/confirm_password"
                android:background="@null"
                android:inputType="textPassword"
                android:layout_marginStart="12dp"
                android:autofillHints="password" />

            <ImageView
                android:contentDescription="@string/show_password"
                android:id="@+id/btnShowConfirmPassword"
                android:src="@drawable/ic_eye"
                android:layout_width="24dp"
                android:layout_height="24dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:backgroundTint="#27B1AF" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />

    </LinearLayout>
</RelativeLayout>